--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "taduko-bot",
   "private": true,
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "rimraf dist && tspc -p tsconfig.json",
     "format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
-    "lint": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore"
+    "lint": "eslint --fix"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -19,7 +20,7 @@
     "@types/node": "^20.14.2",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.56.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "nodemon": "^3.1.3",
