--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon src/index.ts",
     "build": "rimraf dist && tspc -p tsconfig.json",
     "format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
-    "lint": "eslint --fix"
+    "lint": "eslint ./src --ext ts,tsx --max-warnings 0"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -18,9 +18,9 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^20.14.2",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "nodemon": "^3.1.3",
