--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "taduko-bot",
   "private": true,
   "version": "0.0.1",
-  "type": "module",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
@@ -11,6 +10,7 @@
     "lint": "eslint ./src --ext ts,tsx --max-warnings 0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.12.0",
     "axios": "^1.7.2",
     "telegraf": "^4.16.3"
   },
